# rocker-binder-uv-example

./: Dockerfile  README.md  geopandas-demo.ipynb  pyproject.toml
